--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     tools:context="com.baidu.music.httpclient.MainActivity">
 
     <TextView
-        android:text="Hello World!"
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </RelativeLayout>
